{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 125,
  "lineage": "47c88a20-60e6-5df8-9cc9-ffc6f5e3bf86",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "ecs-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:773883478555:loadbalancer/app/ecs-load-balancer/ad5c298043ee36b8",
            "arn_suffix": "app/ecs-load-balancer/ad5c298043ee36b8",
            "dns_name": "ecs-load-balancer-1525377025.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:773883478555:loadbalancer/app/ecs-load-balancer/ad5c298043ee36b8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-load-balancer",
            "security_groups": [
              "sg-0ea8f47dc41055781"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09771ea26a2af6b78"
              },
              {
                "subnet_id": "subnet-0ec22fb6f340c091a"
              }
            ],
            "subnets": [
              "subnet-09771ea26a2af6b78",
              "subnet-0ec22fb6f340c091a"
            ],
            "tags": {
              "Name": "ecs-load-balancer"
            },
            "vpc_id": "vpc-0695f8ad1f3eb18aa",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.test_public_sg",
            "aws_subnet.test_public_sn_01",
            "aws_subnet.test_public_sn_02",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:773883478555:listener/app/ecs-load-balancer/ad5c298043ee36b8/7b3011ce7899e556",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:773883478555:targetgroup/ecs-target-group/7752d2f05c38070d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:773883478555:listener/app/ecs-load-balancer/ad5c298043ee36b8/7b3011ce7899e556",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:773883478555:loadbalancer/app/ecs-load-balancer/ad5c298043ee36b8",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.ecs-load-balancer",
            "aws_alb_target_group.ecs-target-group",
            "aws_security_group.test_public_sg",
            "aws_subnet.test_public_sn_01",
            "aws_subnet.test_public_sn_02",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "ecs-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:773883478555:targetgroup/ecs-target-group/7752d2f05c38070d",
            "arn_suffix": "targetgroup/ecs-target-group/7752d2f05c38070d",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:773883478555:targetgroup/ecs-target-group/7752d2f05c38070d",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecs-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "ecs-target-group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0695f8ad1f3eb18aa"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demoIG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:773883478555:internet-gateway/igw-073c84886c5519f26",
            "id": "igw-073c84886c5519f26",
            "owner_id": "773883478555",
            "tags": {
              "Name": "ecsDemoIG"
            },
            "vpc_id": "vpc-0695f8ad1f3eb18aa"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test_public_sn_ro",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0d6139ee4019dc255",
            "owner_id": "773883478555",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-073c84886c5519f26",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test_public_sn_ro"
            },
            "vpc_id": "vpc-0695f8ad1f3eb18aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demoIG",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "test_public_sn_roAssn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df7780fc9c5ef5ef",
            "route_table_id": "rtb-0d6139ee4019dc255",
            "subnet_id": "subnet-09771ea26a2af6b78"
          },
          "dependencies": [
            "aws_internet_gateway.demoIG",
            "aws_route_table.test_public_sn_ro",
            "aws_subnet.test_public_sn_01",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:773883478555:security-group/sg-0ea8f47dc41055781",
            "description": "Test public access security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea8f47dc41055781",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "200.0.0.0/24",
                  "200.0.1.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "test_public_sg",
            "name_prefix": "",
            "owner_id": "773883478555",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test_public_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0695f8ad1f3eb18aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_public_sn_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:773883478555:subnet/subnet-09771ea26a2af6b78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "200.0.0.0/24",
            "id": "subnet-09771ea26a2af6b78",
            "map_public_ip_on_launch": false,
            "owner_id": "773883478555",
            "tags": {
              "Name": "ecstest_public_sn_01-0"
            },
            "vpc_id": "vpc-0695f8ad1f3eb18aa"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "test_public_sn_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:773883478555:subnet/subnet-0ec22fb6f340c091a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "200.0.1.0/24",
            "id": "subnet-0ec22fb6f340c091a",
            "map_public_ip_on_launch": false,
            "owner_id": "773883478555",
            "tags": {
              "Name": "ecstest_public_sn_02-0"
            },
            "vpc_id": "vpc-0695f8ad1f3eb18aa"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:773883478555:vpc/vpc-0695f8ad1f3eb18aa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "200.0.0.0/16",
            "default_network_acl_id": "acl-0612a524111e28acc",
            "default_route_table_id": "rtb-0c5e3ecef6c390f4c",
            "default_security_group_id": "sg-07b9a29f36d4934bb",
            "dhcp_options_id": "dopt-fd837996",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0695f8ad1f3eb18aa",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c5e3ecef6c390f4c",
            "owner_id": "773883478555",
            "tags": {
              "Name": "ecstest_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}